revamped the whole code because of the alignment issues I think its working now

--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -1,51 +1,76 @@
+* {
+    box-sizing: border-box;
+    font-family: "Al Bayan", serif;
+}
+
 h1 {
     text-align: center;
+    color: #000000;
+}
+
+.row {
+    width: 100%;
 }
 
 body {
-    font-family: "Al Bayan", serif;
+
 }
 div {
-
     margin: 10px;
-
 }
 
 p {
-    padding: 30px 10px 10px 10px;
+    padding: 10px;
+    margin: 0;
+
 }
 .row {
     width: 100%;
 }
 
+section {
+    border: 1px solid black;
+    background-color: #999999;
+    margin: 10px;
+    position: relative;
+}
 
-#Chicken, #Beef, #Sushi {
-    border: solid 2px;
+
+section>h2 {
+    float: right;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
     width: 100px;
+    font-weight: bold;
     text-align: center;
+    margin: 0;
     right: 0;
     top: 0;
+    position: absolute;
 }
-#Chicken {
+
+section.cocks>h2 {
     background-color: #D59898;
 }
 
-#Beef {
+section.moos>h2 {
+    color: #e2e2e2;
     background-color: #C14543;
 }
 
-#Sushi {
+section.konnichiwa>h2 {
     background-color: #E5D198;
+}
+
+section>p {
+    padding: 40px 15px 15px 15px;
 }
 
 /********** Large devices only **********/
 
 @media (min-width: 992px) {
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-        background-color: #999999;
         float: left;
-        border: solid 2px;
-
     }
 
     .col-lg-1 {
@@ -102,9 +127,7 @@ p {
 
 @media (min-width: 768px) and (max-width: 991px) {
     .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-        background-color: #999999;
         float: left;
-        border: solid 2px;
     }
     .col-md-1 {
         width: 8.33%;
@@ -147,11 +170,9 @@ p {
 
 /********** Small devices only **********/
 
-@media (min-width: 10px) and (max-width: 767px) {
+@media (max-width: 767px) {
     .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-        background-color: #999999;
         float: left;
-        border: solid 2px;
     }
     .col-sm-1 {
         width: 8.33%;
